{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 223,
  "lineage": "df483cb6-f8e9-af44-0cc0-19e31c17c965",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "demo_eu_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:327250713413:loadbalancer/app/demo-eu-alb/2a4013f8908154af",
            "arn_suffix": "app/demo-eu-alb/2a4013f8908154af",
            "dns_name": "demo-eu-alb-709863263.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:327250713413:loadbalancer/app/demo-eu-alb/2a4013f8908154af",
            "idle_timeout": 600,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-eu-alb",
            "security_groups": [
              "sg-0e4ea787c7b27a961"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0248f940b0ce12e6a"
              },
              {
                "subnet_id": "subnet-0b0403a1eb89e6821"
              },
              {
                "subnet_id": "subnet-0d85f9e3512193d1b"
              }
            ],
            "subnets": [
              "subnet-0248f940b0ce12e6a",
              "subnet-0b0403a1eb89e6821",
              "subnet-0d85f9e3512193d1b"
            ],
            "vpc_id": "vpc-0771778929b9f7887",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "depends_on": [
            "aws_security_group.lb_sg",
            "aws_subnet.demo-public-1",
            "aws_subnet.demo-public-2",
            "aws_subnet.demo-public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:327250713413:listener/app/demo-eu-alb/2a4013f8908154af/a02c46e8bffe2f22",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:327250713413:targetgroup/nginx/e3743cb74bdf228b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:327250713413:listener/app/demo-eu-alb/2a4013f8908154af/a02c46e8bffe2f22",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:327250713413:loadbalancer/app/demo-eu-alb/2a4013f8908154af",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.demo_eu_alb",
            "aws_alb_target_group.nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:327250713413:targetgroup/nginx/e3743cb74bdf228b",
            "arn_suffix": "targetgroup/nginx/e3743cb74bdf228b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:327250713413:targetgroup/nginx/e3743cb74bdf228b",
            "lambda_multi_value_headers_enabled": false,
            "name": "nginx",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0771778929b9f7887"
          },
          "depends_on": [
            "aws_alb.demo_eu_alb",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02cfe8cdd04c07b04",
            "owner_id": "327250713413",
            "tags": {
              "Name": "demo-IG"
            },
            "vpc_id": "vpc-0771778929b9f7887"
          },
          "depends_on": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0219227a9cc287729",
            "owner_id": "327250713413",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cfe8cdd04c07b04",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public-1"
            },
            "vpc_id": "vpc-0771778929b9f7887"
          },
          "depends_on": [
            "aws_internet_gateway.demo-gw",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f433cd7da7a6102",
            "route_table_id": "rtb-0219227a9cc287729",
            "subnet_id": "subnet-0248f940b0ce12e6a"
          },
          "depends_on": [
            "aws_route_table.demo-public",
            "aws_subnet.demo-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fed1de931dc286d5",
            "route_table_id": "rtb-0219227a9cc287729",
            "subnet_id": "subnet-0b0403a1eb89e6821"
          },
          "depends_on": [
            "aws_route_table.demo-public",
            "aws_subnet.demo-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08072ed5e50ff2a6a",
            "route_table_id": "rtb-0219227a9cc287729",
            "subnet_id": "subnet-0d85f9e3512193d1b"
          },
          "depends_on": [
            "aws_route_table.demo-public",
            "aws_subnet.demo-public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327250713413:security-group/sg-04664b6e6b5cc27c0",
            "description": "controls direct access to application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04664b6e6b5cc27c0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Access from ALB",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e4ea787c7b27a961"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "application-instances-sg",
            "name_prefix": null,
            "owner_id": "327250713413",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0771778929b9f7887"
          },
          "depends_on": [
            "aws_security_group.lb_sg",
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327250713413:security-group/sg-0e4ea787c7b27a961",
            "description": "controls access to the application ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4ea787c7b27a961",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-ELB",
            "name_prefix": null,
            "owner_id": "327250713413",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0771778929b9f7887"
          },
          "depends_on": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327250713413:subnet/subnet-0b800998a72044060",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.21.40.0/24",
            "id": "subnet-0b800998a72044060",
            "map_public_ip_on_launch": false,
            "owner_id": "327250713413",
            "tags": {
              "Name": "demo-private-1"
            },
            "vpc_id": "vpc-0771778929b9f7887"
          },
          "depends_on": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327250713413:subnet/subnet-0a9605fdb5d8df862",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.21.50.0/24",
            "id": "subnet-0a9605fdb5d8df862",
            "map_public_ip_on_launch": false,
            "owner_id": "327250713413",
            "tags": {
              "Name": "demo-private-2"
            },
            "vpc_id": "vpc-0771778929b9f7887"
          },
          "depends_on": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327250713413:subnet/subnet-0c5c674267c1485d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.21.60.0/24",
            "id": "subnet-0c5c674267c1485d6",
            "map_public_ip_on_launch": false,
            "owner_id": "327250713413",
            "tags": {
              "Name": "demo-private-3"
            },
            "vpc_id": "vpc-0771778929b9f7887"
          },
          "depends_on": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327250713413:subnet/subnet-0248f940b0ce12e6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.21.10.0/24",
            "id": "subnet-0248f940b0ce12e6a",
            "map_public_ip_on_launch": true,
            "owner_id": "327250713413",
            "tags": {
              "Name": "demo-public-1"
            },
            "vpc_id": "vpc-0771778929b9f7887"
          },
          "depends_on": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327250713413:subnet/subnet-0b0403a1eb89e6821",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.21.20.0/24",
            "id": "subnet-0b0403a1eb89e6821",
            "map_public_ip_on_launch": true,
            "owner_id": "327250713413",
            "tags": {
              "Name": "demo-public-2"
            },
            "vpc_id": "vpc-0771778929b9f7887"
          },
          "depends_on": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327250713413:subnet/subnet-0d85f9e3512193d1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.21.30.0/24",
            "id": "subnet-0d85f9e3512193d1b",
            "map_public_ip_on_launch": true,
            "owner_id": "327250713413",
            "tags": {
              "Name": "demo-public-3"
            },
            "vpc_id": "vpc-0771778929b9f7887"
          },
          "depends_on": [
            "aws_vpc.demo-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-tf",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327250713413:vpc/vpc-0771778929b9f7887",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-003af556cc1994cf2",
            "default_route_table_id": "rtb-05e65a7b2796145ff",
            "default_security_group_id": "sg-0a34cf1738cf1a65e",
            "dhcp_options_id": "dopt-4e4bf036",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0771778929b9f7887",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05e65a7b2796145ff",
            "owner_id": "327250713413",
            "tags": {
              "Name": "demo-terraform"
            }
          }
        }
      ]
    }
  ]
}